# cw-node-helper

./: .env.example  .gitignore  CLAUDE.md  ENV_GUIDE.txt  HIDDEN_FEATURES.md  README.md  SETUP.txt  TODO.txt  get_node_context.py  git_menu.sh  install.sh  pyproject.toml  requirements.txt  start.sh  test_integrity.py  test_map.py  watch_queue.sh
.github/workflows/: ci.yml
assets/tapes/: config.tape  hero.tape  setup.tape
cwhelper/: __init__.py  cache.py  cli.py  config.py  state.py  tui_app.py
cwhelper/agents/: __init__.py  orchestrator.py
cwhelper/clients/: fleet.py  grafana.py  gsheets.py  jira.py  kubectl.py  netbox.py  teleport.py
cwhelper/services/: ai.py  bookmarks.py  brief.py  context.py  ib_sketch.py  ib_trace.py  learn.py  learn_engine.py  notifications.py  queue.py  rack.py  rack_report.py  radar.py  search.py  session_log.py  verify.py  walkthrough.py  watcher.py  weekend.py
cwhelper/tui/: actions.py  cab_view.py  connection_view.py  display.py  ib_trace_view.py  menu.py  rack_helpers.py  rich_console.py  settings.py
docs/: BUILD_LOG.md  CICD_GUIDE.md  DEV_GUIDE.md  FUTURE_PLANS.md  SESSION_LOG.md  UPDATE_LOG_2026-03-01.md
site/: cicd.html  index.html  rack-map.html  setup-guide.html
site/codepen/: markup.html
site/codepen/setup-guide/: markup.html  script.js  styles.css
