[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cw-node-helper"
version = "6.5.0"
description = "DCT terminal companion — Jira + NetBox + Grafana queue browser"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0", "rich>=13.0.0", "textual>=0.50.0"]
license = {text = "MIT"}

[project.optional-dependencies]
ai = ["openai>=1.0.0"]
visual = ["Pillow>=9.0.0"]
tui = ["textual>=0.50.0"]

[project.scripts]
cwhelper = "cwhelper.cli:main"

[tool.setuptools.packages.find]
exclude = ["site", "source"]
